20100113 version: openal-ada 1.1.0
20100113 code: imported installer 2.3.1
20100113 version: openal-ada 1.1.1